--- a/labs/lab15/presentation/net-os-admin--lab15--presentation.qmd
+++ b/labs/lab15/presentation/net-os-admin--lab15--presentation.qmd
@@ -1,200 +1,108 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №15"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка сетевого журналирования"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Получение навыков работы с журналами системных событий и настройки централизованного журналирования
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Настройка сервера сетевого журналирования
+- Конфигурация клиентов для передачи логов
+- Использование инструментов анализа журналов
+- Автоматизация развертывания системы
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Настройка сервера журналирования
 
-:::
-::: {.column width="30%"}
+**Конфигурация rsyslog:**
+- Создание конфигурационных файлов
+- Активация TCP-приёмника на порту 514
+- Перезапуск службы rsyslog
+- Проверка работы сервера
 
-![](./image/kulyabov.jpg)
+![Конфигурация TCP-приёмника rsyslog](image/2.png){width=70%}
 
-:::
-::::::::::::::
+# Сетевая безопасность
 
-# Вводная часть
+**Настройка firewall:**
+- Открытие TCP-порта 514
+- Добавление постоянных правил
+- Проверка доступности сервера
+- Обеспечение защищённого обмена
 
-## Актуальность
+![Настройка firewall для сетевого журналирования](image/5.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Клиентская конфигурация
 
-## Объект и предмет исследования
+**Перенаправление логов:**
+- Создание клиентских конфигураций
+- Настройка отправки сообщений на сервер
+- Перезапуск клиентских служб
+- Проверка соединения с сервером
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Настройка перенаправления логов на сервер](image/7.png){width=70%}
 
-## Цели и задачи
+# Мониторинг журналов в реальном времени
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Отслеживание событий:**
+- Использование команды tail -f
+- Анализ сообщений от разных хостов
+- Выявление системных проблем
+- Мониторинг работы служб
 
-## Материалы и методы
+![Мониторинг журнала сообщений в реальном времени](image/9.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Графические инструменты анализа
 
-# Создание презентации
+**Использование системного монитора:**
+- Запуск gnome-system-monitor
+- Просмотр различных категорий событий
+- Анализ сообщений от клиентов
+- Визуализация системной информации
 
-## Процессор `pandoc`
+![Просмотр журналов через gnome-system-monitor](image/10.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Установка специализированных инструментов
 
-## Формат `pdf`
+**Расширенные возможности анализа:**
+- Установка просмотрщика lnav
+- Настройка цветового выделения
+- Использование фильтров и поиска
+- Анализ структурированных логов
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Установка просмотрщика журналов lnav](image/11.png){width=70%}
 
-## Код для формата `pdf`
+# Продвинутый анализ журналов
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Работа с lnav:**
+- Просмотр и фильтрация сообщений
+- Анализ временных меток
+- Поиск ошибок и предупреждений
+- Мониторинг сетевой активности
 
-## Формат `html`
+![Анализ журналов с помощью lnav](image/12.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# Автоматизация развертывания
 
-## Код для формата `html`
+**Скрипты provisioning:**
+- Разработка скриптов для сервера и клиентов
+- Автоматическая настройка конфигураций
+- Интеграция с системой виртуализации
+- Тестирование работы автоматизации
 
-- Тема задаётся в файле `Makefile`
+![Скрипт настройки сервера журналирования](image/13.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Выводы
 
-## Получающиеся форматы
-
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
-
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Освоена настройка сервера сетевого журналирования
+- Приобретён опыт конфигурации клиентских устройств
+- Изучены инструменты анализа системных логов
+- Разработана система автоматизации развертывания
+- Освоены методы диагностики на основе журналов
+- Получены навыки обеспечения безопасности журналирования
