--- a/labs/lab15/report/net-os-admin--lab15--report.qmd
+++ b/labs/lab15/report/net-os-admin--lab15--report.qmd
@@ -1,67 +1,151 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №15"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка сетевого журналирования"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получение практических навыков по работе с журналами системных событий, настройке централизованного сетевого журналирования и мониторинга событий в распределённой среде.
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Настроить сервер сетевого журналирования событий
+2. Настроить клиент для передачи системных сообщений в сетевой журнал
+3. Просмотреть журналы системных событий с помощью различных инструментов
+4. Разработать скрипты автоматизации для развертывания системы журналирования
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Настройка сервера сетевого журнала
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Подготовка конфигурации
+На серверной машине создан файл конфигурации сетевого хранения журналов в каталоге /etc/rsyslog.d/. Создан файл netlog-server.conf для настройки параметров сервера журналирования.
+
+![Создание конфигурационного файла сервера](image/1.png)
+
+### Конфигурация TCP-приёмника
+В файл конфигурации добавлены директивы для включения приёма записей журнала по TCP-порту 514. Загружен модуль imtcp и активирован TCP-сервер на указанном порту.
+
+![Конфигурация TCP-приёмника rsyslog](image/2.png)
+
+### Перезапуск службы rsyslog
+Выполнен перезапуск службы rsyslog для применения новых настроек. Проверено состояние службы и прослушиваемые порты, связанные с rsyslog.
+
+![Перезапуск службы rsyslog](image/3.png)
+
+### Проверка открытых портов
+С помощью команды lsof проверено, что rsyslog прослушивает TCP-порт 514, что подтверждает корректность настройки сервера сетевого журналирования.
+
+![Проверка открытых портов rsyslog](image/4.png)
+
+### Настройка межсетевого экрана
+Настроены правила firewall для разрешения входящих соединений на TCP-порт 514. Добавлены как временные, так и постоянные правила для обеспечения сетевой безопасности.
+
+![Настройка firewall для сетевого журналирования](image/5.png)
+
+## Настройка клиента сетевого журнала
+
+### Подготовка клиентской конфигурации
+На клиентской машине создан файл конфигурации netlog-client.conf в каталоге /etc/rsyslog.d/. Файл содержит настройки для перенаправления сообщений журнала.
+
+![Создание конфигурационного файла клиента](image/6.png)
+
+### Конфигурация перенаправления сообщений
+В файл конфигурации добавлена директива для перенаправления всех системных сообщений (*.*) на сервер журналирования через TCP-порт 514 с использованием двойного символа @@ для TCP-соединения.
+
+![Настройка перенаправления логов на сервер](image/7.png)
+
+### Перезапуск клиентской службы
+Выполнен перезапуск службы rsyslog на клиенте для применения новой конфигурации. Проверен статус службы для подтверждения корректной работы.
+
+![Перезапуск rsyslog на клиенте](image/8.png)
+
+### Проверка соединения
+Проверена возможность установления TCP-соединения между клиентом и сервером журналирования. Убедились в доступности порта 514 на сервере.
+
+## Просмотр журналов событий
+
+### Мониторинг системных сообщений
+На сервере выполнена проверка файла /var/log/messages с использованием команды tail -f для отслеживания поступающих сообщений в реальном времени. Проанализированы записи с различных хостов.
+
+![Мониторинг журнала сообщений в реальном времени](image/9.png)
+
+### Использование графического монитора
+Запущена графическая программа gnome-system-monitor для просмотра системных журналов. Проанализированы различные категории событий и сообщения от клиентских устройств.
+
+![Просмотр журналов через gnome-system-monitor](image/10.png)
+
+### Установка специализированного просмотрщика
+Установлен просмотрщик журналов lnav, предоставляющий расширенные возможности для анализа и фильтрации системных сообщений.
+
+![Установка просмотрщика журналов lnav](image/11.png)
+
+### Анализ журналов через lnav
+Запущен lnav для просмотра и анализа журналов. Использованы возможности цветового выделения, фильтрации и поиска для эффективной работы с большими объёмами логов.
+
+![Анализ журналов с помощью lnav](image/12.png)
+
+### Диагностика системных проблем
+Проанализированы сообщения о некорректной работе сервисов. Выявлены и исправлены ошибки в настройках соответствующих служб на основе информации из журналов.
+
+## Автоматизация развертывания
+
+### Разработка скриптов provisioning
+Созданы исполняемые скрипты для автоматической настройки сервера и клиента системы сетевого журналирования. Скрипты включают копирование конфигурационных файлов и настройку служб.
+
+![Скрипт настройки сервера журналирования](image/13.png)
+
+### Организация конфигурационных файлов
+Создана структура каталогов для хранения конфигурационных файлов сервера и клиента. Выполнено копирование рабочих конфигураций в соответствующие директории.
+
+### Интеграция с Vagrant
+Настроены секции provisioning в конфигурационном файле Vagrant для автоматического выполнения скриптов при развертывании виртуальных машин.
+
+![Конфигурация Vagrantfile для журналирования](image/14.png)
+
+### Тестирование работы автоматизации
+Протестирована работа скриптов автоматизации при создании виртуальных машин. Проверена корректность настройки всех компонентов системы журналирования.
+
+### Проверка передачи журналов
+Проверена передача сообщений от клиента на сервер журналирования. Убедились в корректной записи клиентских логов в централизованное хранилище.
+
+
+# Контрольные вопросы
+
+1. **Какой модуль rsyslog вы должны использовать для приёма сообщений от journald?**  
+   Модуль imjournal используется для приёма сообщений от journald.
+
+2. **Как называется устаревший модуль, который можно использовать для включения приёма сообщений журнала в rsyslog?**  
+   Устаревший модуль - imuxsock.
+
+3. **Чтобы убедиться, что устаревший метод приёма сообщений из journald в rsyslog не используется, какой дополнительный параметр следует использовать?**  
+   Следует использовать параметр RateLimit.Interval=0 в конфигурации imjournal.
+
+4. **В каком конфигурационном файле содержатся настройки, которые позволяют вам настраивать работу журнала?**  
+   Настройки содержатся в файле /etc/systemd/journald.conf.
+
+5. **Каким параметром управляется пересылка сообщений из journald в rsyslog?**  
+   Параметром ForwardToSyslog в файле /etc/systemd/journald.conf.
+
+6. **Какой модуль rsyslog вы можете использовать для включения сообщений из файла журнала, не созданного rsyslog?**  
+   Модуль imfile позволяет читать сообщения из произвольных файлов.
+
+7. **Какой модуль rsyslog вам нужно использовать для пересылки сообщений в базу данных MariaDB?**  
+   Модуль ommysql используется для пересылки сообщений в базу данных MariaDB.
+
+8. **Какие две строки вам нужно включить в rsyslog.conf, чтобы позволить текущему журнальному серверу получать сообщения через TCP?**  
+   $ModLoad imtcp и $InputTCPServerRun 514.
+
+9. **Как настроить локальный брандмауэр, чтобы разрешить приём сообщений журнала через порт TCP 514?**  
+   Использовать команды: firewall-cmd --add-port=514/tcp и firewall-cmd --add-port=514/tcp --permanent.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены практические навыки настройки сервера сетевого журналирования с использованием rsyslog
+- Приобретён опыт конфигурации клиентских устройств для передачи системных сообщений в централизованное хранилище
+- Изучены различные инструменты для просмотра и анализа журналов системных событий
+- Освоены методы диагностики системных проблем на основе информации из журналов
+- Получены навыки настройки сетевой безопасности для системы журналирования
+- Разработана система автоматизации развертывания инфраструктуры сетевого журналирования
+- Изучены особенности работы с различными форматами журналов и инструментами их анализа
+- Приобретён опыт настройки мониторинга системных событий в распределённой сетевой среде
