--- a/labs/lab07/report/net-os-admin--lab07--report.qmd
+++ b/labs/lab07/report/net-os-admin--lab07--report.qmd
@@ -1,67 +1,107 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №7"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Расширенные настройки межсетевого экрана"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получение практических навыков настройки межсетевого экрана **FirewallD** в операционной системе **Rocky Linux 9** для реализации функций переадресации портов и маскарадинга.
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1.  Настроить межсетевой экран для доступа по протоколу **SSH** через порт **2022** вместо стандартного порта 22.
+2.  Настроить переадресацию портов на сервере.
+3.  Настроить маскарадинг для обеспечения доступа клиента к сети Интернет.
+4.  Создать и интегрировать скрипт для автоматической настройки межсетевого экрана в инфраструктуру **Vagrant**.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## 7.4.1. Настройка пользовательской службы FirewallD
+### Подготовка рабочего окружения
+Была запущена виртуальная машина **server** из директории проекта Vagrant. Выполнен вход в систему и переход в режим суперпользователя для выполнения административных задач.
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+![Запуск виртуальной машины и вход под суперпользователем](image/1.png)
+
+### Создание пользовательской службы SSH
+На основе стандартного XML-файла конфигурации службы `ssh` создана пользовательская копия `ssh-custom.xml`. Синтаксис файла службы основан на XML-разметке, где задаются имя службы, описание и правила доступа. Ключевым элементом является тег `<port>`, определяющий протокол и номер порта, который служба будет использовать.
+
+![Создание и просмотр файла пользовательской службы](image/2.png)
+
+### Модификация конфигурации службы
+В созданном файле `ssh-custom.xml` произведена замена стандартного порта **22** на порт **2022**. Также обновлено текстовое описание службы для указания её модифицированного характера.
+
+![Редактирование конфигурационного файла службы](image/3.png)
+
+### Активация пользовательской службы в FirewallD
+После перезагрузки конфигурации **FirewallD** новая служба `ssh-custom` появилась в общем списке доступных служб, но не была активирована для текущей зоны. Далее служба была добавлена в активный набор правил межсетевого экрана как для текущей сессии, так и в постоянную конфигурацию.
+
+![Добавление и активация пользовательской службы в FirewallD](image/4.png)
+
+## 7.4.2. Настройка переадресации портов
+### Конфигурация правила перенаправления
+На сервере настроено правило переадресации входящего трафика с порта **2022** на стандартный порт службы SSH (**22**) с использованием протокола **TCP**. Данное правило позволяет внешним клиентам обращаться к SSH-серверу через альтернативный порт.
+
+![Настройка правила переадресации портов](image/5.png)
+
+### Проверка доступности SSH на новом порту
+С виртуальной машины **client** выполнено тестовое подключение по протоколу **SSH** к серверу с указанием порта **2022**. Успешное подключение подтвердило корректность настройки переадресации.
+
+![Проверка подключения по SSH через порт 2022](image/6.png)
+
+## 7.4.3. Настройка Port Forwarding и Masquerading
+### Включение IP-форвардинга в ядре
+Проверена текущая настройка перенаправления IP-пакетов в ядре ОС. Для активации данной функции создан и применён конфигурационный файл `90-forward.conf`, устанавливающий параметр `net.ipv4.ip_forward` в значение `1`.
+
+![Активация перенаправления IP-пакетов в ядре](image/7.png)
+
+### Включение маскарадинга в FirewallD
+В зоне **public** межсетевого экрана активирован механизм **Masquerading**. Это позволяет серверу выполнять трансляцию сетевых адресов для пакетов, исходящих из внутренней сети во внешнюю.
+
+![Настройка маскарадинга в FirewallD](image/8.png)
+
+### Проверка выхода в Интернет с клиента
+С виртуальной машины **client** выполнена проверка доступности внешних сетевых ресурсов. Успешный результат подтвердил работоспособность настроек маршрутизации и маскарадинга.
+
+![Проверка сетевого подключения клиента к Интернету](image/9.png)
+
+## 7.4.4. Автоматизация настройки с помощью скрипта
+### Подготовка файлов конфигурации
+Все созданные конфигурационные файлы (XML-файл службы `ssh-custom` и конфигурация ядра `90-forward.conf`) скопированы в соответствующую директорию проекта **Vagrant** внутри папки `provision/server/firewall/`.
+
+![Копирование конфигурационных файлов в проект Vagrant](image/10.png)
+
+### Создание и настройка provisioning-скрипта
+В директории проекта создан исполняемый bash-скрипт `firewall.sh`. В скрипт включены команды для копирования конфигурационных файлов в целевую систему, а также для применения всех настроек **FirewallD** (добавление службы, настройка переадресации портов и маскарадинга) с флагом `--permanent` для сохранения изменений после перезагрузки.
+
+![Создание и содержимое скрипта автоматической настройки](image/11.png)
+
+### Интеграция скрипта в Vagrantfile
+Для автоматического выполнения настройки при развертывании виртуальной машины в файл **Vagrantfile** добавлен вызов созданного скрипта в качестве provisioning-шага для виртуальной машины **server**.
+
+![Добавление скрипта в конфигурацию Vagrantfile](image/12.png)
+
+# Контрольные вопросы
+1.  **Где хранятся пользовательские файлы firewalld?**  
+    Пользовательские файлы конфигурации служб **FirewallD** хранятся в директории `/etc/firewalld/services/`. Файлы из этой директории имеют приоритет над стандартными, расположенными в `/usr/lib/firewalld/services/`.
+
+2.  **Какую строку надо включить в пользовательский файл службы, чтобы указать порт TCP 2022?**  
+    В XML-файл службы необходимо добавить строку: `<port protocol="tcp" port="2022"/>`.
+
+3.  **Какая команда позволяет вам перечислить все службы, доступные в настоящее время на вашем сервере?**  
+    Команда `firewall-cmd --get-services` выводит список всех служб, известных **FirewallD** (стандартные и пользовательские).
+
+4.  **В чем разница между трансляцией сетевых адресов (NAT) и маскарадингом (masquerading)?**  
+    **Маскарадинг (Masquerading)** является частным случаем **NAT (Network Address Translation)**. В отличие от статического NAT, маскарадинг динамически подставляет IP-адрес и порт исходящего сетевого интерфейса в качестве адреса отправителя для всех пакетов из внутренней сети. Это особенно удобно, когда внешний IP-адрес интерфейса может меняться (например, при DHCP-подключении).
+
+5.  **Какая команда разрешает входящий трафик на порт 4404 и перенаправляет его в службу ssh по IP-адресу 10.0.0.10?**  
+    Для этого потребуется команда переадресации с указанием целевого адреса: `firewall-cmd --add-forward-port=port=4404:proto=tcp:toport=22:toaddr=10.0.0.10`
+
+6.  **Какая команда используется для включения маскарадинга IP-пакетов для всех пакетов, выходящих в зону public?**  
+    Команда: `firewall-cmd --zone=public --add-masquerade`. Для сохранения правила после перезагрузки используется флаг `--permanent`.
 
 # Выводы
-
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+-   Приобретены практические навыки работы с динамическим межсетевым экраном **FirewallD** в **Rocky Linux 9**.
+-   Освоена методика создания и активации пользовательских служб для управления сетевым доступом через нестандартные порты.
+-   Успешно настроена переадресация портов для доступа к службе SSH через альтернативный порт.
+-   Настроен механизм **Masquerading** и включено перенаправление IP-пакетов в ядре, что позволило организовать доступ клиента к Интернету через сервер.
+-   Реализован **provisioning-скрипт** для автоматического воспроизведения всей конфигурации межсетевого экрана при развертывании виртуальной машины с помощью **Vagrant**, что повышает воспроизводимость и автоматизацию процесса настройки.
