--- a/labs/lab07/presentation/net-os-admin--lab07--presentation.qmd
+++ b/labs/lab07/presentation/net-os-admin--lab07--presentation.qmd
@@ -1,200 +1,149 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №7"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Расширенные настройки межсетевого экрана"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Получить практические навыки расширенной настройки межсетевого экрана **FirewallD**.
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Настроить доступ по SSH через нестандартный порт 2022
+- Реализовать переадресацию портов
+- Настроить маскарадинг для доступа клиента в Интернет
+- Автоматизировать процесс настройки с помощью скрипта
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+![Запуск виртуальной машины и вход под суперпользователем](image/1.png){width=70%}
 
-:::
-::: {.column width="30%"}
+# Создание пользовательской службы
 
-![](./image/kulyabov.jpg)
+**Настройка FirewallD для SSH на порту 2022:**
+- Создание XML-файла пользовательской службы `ssh-custom`
+- Изменение стандартного порта 22 на 2022
+- Активация службы в текущей и постоянной конфигурации
 
-:::
-::::::::::::::
+![Создание и просмотр файла пользовательской службы](image/2.png){width=70%}
 
-# Вводная часть
+# Редактирование конфигурации службы
 
-## Актуальность
+**Модификация файла службы:**
+- Копирование стандартного шаблона службы SSH
+- Редактирование XML-файла для указания порта 2022
+- Обновление описания службы
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+![Редактирование конфигурационного файла службы](image/3.png){width=70%}
 
-## Объект и предмет исследования
+# Активация службы
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+**Добавление службы в FirewallD:**
+- Перезагрузка конфигурации FirewallD
+- Добавление службы `ssh-custom` в активные правила
+- Сохранение изменений с флагом `--permanent`
 
-## Цели и задачи
+![Добавление и активация пользовательской службы в FirewallD](image/4.png){width=70%}
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+# Настройка переадресации портов
 
-## Материалы и методы
+**Организация доступа через порт 2022:**
+- Добавление правила переадресации TCP-трафика
+- Направление входящих соединений с порта 2022 на порт 22
+- Проверка доступности SSH-сервера на новом порту
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+![Настройка правила переадресации портов](image/5.png){width=70%}
 
-# Создание презентации
+# Тестирование SSH-подключения
 
-## Процессор `pandoc`
+**Проверка работоспособности:**
+- Подключение с клиентской машины через порт 2022
+- Использование параметра `-p` в команде ssh
+- Подтверждение успешного установления соединения
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+![Проверка подключения по SSH через порт 2022](image/6.png){width=70%}
 
-## Формат `pdf`
+# Включение IP-форвардинга
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+**Активация маршрутизации в ядре ОС:**
+- Проверка текущего состояния перенаправления пакетов
+- Создание конфигурационного файла `90-forward.conf`
+- Установка параметра `net.ipv4.ip_forward = 1`
 
-## Код для формата `pdf`
+![Активация перенаправления IP-пакетов в ядре](image/7.png){width=70%}
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+# Настройка маскарадинга
 
-## Формат `html`
+**Обеспечение доступа клиента в Интернет:**
+- Включение механизма Masquerading в зоне public
+- Применение изменений с флагом `--permanent`
+- Проверка сетевого подключения клиента
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+![Настройка маскарадинга в FirewallD](image/8.png){width=70%}
 
-## Код для формата `html`
+# Проверка сетевого доступа
 
-- Тема задаётся в файле `Makefile`
+**Тестирование подключения к Интернету:**
+- Проверка доступности внешних сетевых ресурсов
+- Подтверждение работоспособности настроек маршрутизации
+- Верификация работы механизма маскарадинга
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+![Проверка сетевого подключения клиента к Интернету](image/9.png){width=70%}
 
-## Получающиеся форматы
+# Подготовка файлов конфигурации
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+**Создание структуры для автоматизации:**
+- Копирование конфигурационных файлов в проект Vagrant
+- Организация директорий `etc/firewalld/services` и `etc/sysctl.d`
+- Подготовка файлов для provisioning-скрипта
 
-# Элементы презентации
+![Копирование конфигурационных файлов в проект Vagrant](image/10.png){width=70%}
 
-## Актуальность
+# Создание скрипта автоматизации
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+**Разработка bash-скрипта:**
+- Написание скрипта `firewall.sh` для автоматической настройки
+- Включение команд копирования файлов и настройки FirewallD
+- Установка прав на выполнение скрипта
 
-## Цели и задачи
+![Создание и содержимое скрипта автоматической настройки](image/11.png){width=70%}
 
-- Не формулируйте более 1--2 целей исследования
+# Интеграция с Vagrant
 
-## Материалы и методы
+**Настройка автоматического развёртывания:**
+- Добавление скрипта в конфигурацию Vagrantfile
+- Настройка provisioning для виртуальной машины server
+- Обеспечение порядка выполнения скриптов
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+![Добавление скрипта в конфигурацию Vagrantfile](image/12.png){width=70%}
 
-## Содержание исследования
+# Контрольные вопросы
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+**Основные вопросы:**
+- **Где хранятся пользовательские файлы firewalld?**  
+  В директории `/etc/firewalld/services/`
 
-## Результаты
+- **Какую строку добавить для порта TCP 2022?**  
+  `<port protocol="tcp" port="2022"/>`
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+- **Как перечислить все доступные службы?**  
+  Команда `firewall-cmd --get-services`
 
+- **В чём разница NAT и Masquerading?**  
+  Masquerading — частный случай NAT для динамических IP
 
-## Итоговый слайд
+- **Как перенаправить трафик на порт 4404?**  
+  `firewall-cmd --add-forward-port=port=4404:proto=tcp:toport=22:toaddr=10.0.0.10`
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+- **Как включить маскарадинг в зоне public?**  
+  `firewall-cmd --zone=public --add-masquerade`
 
-# Рекомендую
+# Выводы
 
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Освоены методы расширенной настройки FirewallD
+- Реализован доступ к SSH через альтернативный порт
+- Настроен маскарадинг для маршрутизации трафика клиента
+- Создан автоматизированный сценарий развёртывания
+- Приобретены навыки управления сетевым экраном в Linux
